<resources>
    <string name="app_name">Media Player</string>

    <!--MainActivity-->
    <string name="fixed_aspect_ratio">Fixed Aspect Ratio</string>
    <string name="adaptive_aspect_ratio">Adaptive Aspect Ratio</string>
    <string name="fixed_aspect_ratio_intagram">Fixed Aspect Ratio Instagram</string>
    <string name="main_description">This is a demonstration of MediaPlayer Android API.</string>

    <!--FixedAspectRatioActivity-->
    <string name="title_activity_fixed_aspect_ratio">Fixed Aspect Ratio</string>
    <string name="fixed_aspect_ratio_description">Video display area is fixed - streamed video\'s aspect ratio changes to video displayed area so video is distorted. (Default)</string>

    <!--AdaptiveAspectRatioActivity-->
    <string name="title_activity_adaptive_aspect_ratio">Adaptive Aspect Ratio</string>
    <string name="adaptive_aspect_ratio_description">Video display area is adaptive - the height changes to same height as video height.</string>

    <!--FixedAspectRatioInstagramActivity-->
    <string name="title_activity_fixed_aspect_ratio_instagram">Fixed Aspect Ratio Instagram</string>
    <string name="fixed_aspect_ratio_instagram_description">Video display area is fixed - streamed INSTAGRAM videos.</string>>

    <!--LiveStreamActivity-->
    <string name="title_activity_live_stream">Live Stream</string>
    <string name="live_stream_description">Demonstrates use of MediaPlayer API for live streaming.</string>
    <string name="live_stream_link">http://westream.we-tv.tv:1935/live/CoolTV_low/manifest.m3u8</string>

    <!--General-->
    <!--<string name="big_buck_bunny_url">http://igcdn-videos-f-1-a.akamaihd.net/hphotos-ak-xaf1/t50.2886-16/11417197_585146898294981_1397931315_n.mp4</string>-->
    <string name="big_buck_bunny_url">http://download.blender.org/peach/bigbuckbunny_movies/BigBuckBunny_320x180.mp4</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
