<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:orientation="vertical">

        <Button
            android:id="@+id/fixed_aspect_ratio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin"
            android:width="@dimen/button_width"
            android:text="@string/fixed_aspect_ratio"
            android:onClick="onFixedAspectRatioButtonClicked" />

        <Button
            android:id="@+id/adaptive_aspect_ratio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin"
            android:width="@dimen/button_width"
            android:text="@string/adaptive_aspect_ratio"
            android:onClick="onAdaptiveAspectRatioButtonClicked" />

        <Button
            android:id="@+id/fixed_aspect_ratio_instagram_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin"
            android:width="@dimen/button_width"
            android:text="@string/fixed_aspect_ratio_intagram"
            android:onClick="onFixedAspectRatioInstagramButtonClicked" />

        <Button
            android:id="@+id/live_stream_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin"
            android:width="@dimen/button_width"
            android:text="@string/title_activity_live_stream"
            android:onClick="onLiveStreamButtonClicked" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/main_description" />
    </LinearLayout>
</ScrollView>